actualizacion del about

--- a/proyect.html
+++ b/proyect.html
@@ -32,11 +32,16 @@
         </div>
     </header>
     <section class="about">
-
+        <h2> Sobre Nosotros </h2>
+        <p>
+            ¡ El nacimiento de una idea !. Hemos creado esta comunidad para ti, para que te acompañe en tu camino como developer.
+            Permitenos ayudarte en tu crecimiento junto con nuestra ayuda
+            y de la comunidad que nos representa. 
+        </p>
 
     </section>
     <section class="proyectos">
-
     </section>
+
 </body>
 </html>
