--- a/proyect.html
+++ b/proyect.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <div class="header-principal">
-            <figure><img src="#"></figure>
+            <figure><img id="iconoMenu" src="./src/icons/iconoMenu.png"></figure>
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>Proyectos</li>
-                    <li>About</li>
+                    <li><a href="www.youtube.com">Home</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,6 +28,9 @@
                 de que tecnologias usaron en el proceso 
                 para no perderte en el camino.
             </p>
+            </div>
+            <div class="ilustracion-menu">
+                <img src="./src/images/portada.png">
             </div>
         </div>
     </header>
