reordenando el css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </section>
     <section class="seccion-proyectos">
-        <h2 class="subtitulo"> Algunnos Proyectos de la Comunidad</h2>
+        <h2 class="subtitulo"> Algunos Proyectos de la Comunidad 😎</h2>
         <div class="proyectos-contenedor">
             <div class="card">
                 <!-- Cover -->
@@ -153,5 +153,11 @@
 
         </div>
     </section>
+    <div class="boton-direcionador">
+        <button>Ver Mas Aqui 🥵</button>
+    </div>
+    <footer>
+
+    </footer>
 </body>
 </html>
